fixed vertical alignment in ModelServerEvaluationConstraint

--- a/src/extension/webview/components/ModelServerEvaluationConstraint.css
+++ b/src/extension/webview/components/ModelServerEvaluationConstraint.css
@@ -16,6 +16,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .ms-eval-constraint-content {
